Fix padding Team section tablet

--- a/scss/blocks/member/__name/_member__name.scss
+++ b/scss/blocks/member/__name/_member__name.scss
@@ -9,7 +9,7 @@
 
   @include tablet {
     font-size: 22px;
-    margin-top: 30px;
+    margin-top: 26px;
     margin-bottom: 10px;
   }
 }
