--- a/scss/blocks/member/_member.scss
+++ b/scss/blocks/member/_member.scss
@@ -1,3 +1,7 @@
 .member {
   text-align: center;
+
+  @include tablet {
+    text-align: left;
+  }
 }
