--- a/scss/blocks/team/__wrap/_team__wrap.scss
+++ b/scss/blocks/team/__wrap/_team__wrap.scss
@@ -1,11 +1,8 @@
 .team__wrap {
   position: relative;
   @include padding;
-  padding-bottom: 20px;
 
   @include tablet {
-    padding-top: 50px;
-    padding-bottom: 80px;
     padding-right: 0;
   }
 
