--- a/scss/blocks/team/_team.scss
+++ b/scss/blocks/team/_team.scss
@@ -5,7 +5,7 @@
 
   @include tablet {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
 
   @include desktop {
